# vi-player

./: .gitignore  CHANGELOG.md  README.Md  README.md  main.py  pyproject.toml
.config/vi-player/: config.json
.config/vi-player/themes/: catppuccin-mocha.toml  everforest-dark.toml  gruvbox-dark.toml  nord.toml  nvim.toml  rose-pine.toml  solarized-dark.toml
api/: theme.py  ui.py  viplayer.py
assets/: README.md  config.json  config.toml
assets/themes/: deep-blue.toml  default.toml  ember.toml  eternal-grey.toml  gruvbox.toml  light.toml  linen-light.toml  linen.toml  midnight.toml  miku.toml  moss.toml  nord.toml  nvim.toml  ocean.toml  retro.toml  slate.toml  soft.toml  tokyo-night.toml  warm.toml
core/: app.py  config.py  enums.py  lua_utils.py  player.py  playlist.py  plugins.py  song.py  theme.py
docs/: colorschemes.md  compatibility.md  configuration.md  installation.md  motions.md
lua/: autopairs.lua  lualine.lua  luatheme.lua  statusline.lua
src/vi_player/: main.py
src/vi_player/assets/: config.json
src/vi_player/command/: dispatch.py  events.py  ex.py  keys.py  option.py
src/vi_player/config/: bootstrap.py
src/vi_player/core/: app.py  config.py  enums.py  player.py  playlist.py  song.py  theme.py
src/vi_player/input/: keyboard.py  mouse.py
src/vi_player/normal/: actions.py  dispatch.py  motions.py  ops.py
ui/: ascii.py  commandline.py  homescreen.py  playlist.py  statusline.py
util/: commands.py  config.py  highlight.py  keyboard.py  lexer.py  motions.py  player.py  playermode.py  pretty.py  screen.py  screenbuffer.py  theme.py  ui.py
(+25 files in other folders)
