[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vi-player"
version = "0.1.0"
description = "A Vim-like terminal music player"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "GPL-3.0-or-later" }

authors = [ { name = "not2nder" } ]

dependencies = [
  "python-mpv",
  "mutagen",
  "wcwidth"
]

[project.scripts]
viplay = "vi_player.main:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
vi_player = [
  "assets/**/*",
  "themes/**/*"
]
